Checked this can run on try.openbiosim.org and added instructions on how to do that.
There is a slight energy difference for the intra coulomb energies between 2023.1.2
and the current dev sire. This is because dev sire now uses a cutoff that better
matches pmemd. The energies are "correct"

--- a/sire/001_ten_minute/ten_minute.ipynb
+++ b/sire/001_ten_minute/ten_minute.ipynb
@@ -267,7 +267,7 @@
    "id": "60bfd79e-560a-4993-883c-aa063b624158",
    "metadata": {},
    "source": [
-    "It's interesting, looking at these energies, that the molecule appears to be in a higher energy conformation. The total energy is positive (over 37 kcal mol-1), driven by high angle, dihedral and 1-4 non-bonded energies. Maybe being bound to the protein has forced the ligand into an unfavourable conformation?\n",
+    "It's interesting, looking at these energies, that the molecule appears to be in a higher energy conformation. The total energy is large and positive, driven by high angle, dihedral and 1-4 non-bonded energies. Maybe being bound to the protein has forced the ligand into an unfavourable conformation?\n",
     "\n",
     "To find out, let's look to see what is around the ligand. It would be really convenient to have a `ligand` search term... Fortunately, we have the power to create our own search terms via [sire.search.set_token](https://sire.openbiosim.org/cheatsheet/search.html#creating-custom-search-tokens)."
    ]
@@ -590,7 +590,16 @@
     "4. The ligand is bound most tightly to LYS:33, through a strong electrostatic interaction\n",
     "5. This interaction is mostly between the HZ1 atom of lysine and NAM atom of the ligand. These two atoms are separated by 2.4 Å.\n",
     "\n",
-    "Given another 10 minutes, and perhaps even a dynamics trajectory, I wonder what else I can find? But, for now, Julien, how did I do?"
+    "Given another 10 minutes, and perhaps even a dynamics trajectory, I wonder what else I can find? But, for now, Julien, how did I do?\n",
+    "\n",
+    "\n",
+    "If you want to try this yourself, please feel free connect to [try.openbiosim.org](https://try.openbiosim.org) and starting a notebook. You can download the notebook used to generate this post onto the server by running this command in one of the notebook code cells.\n",
+    "\n",
+    "```\n",
+    "! wget https://github.com/OpenBioSim/posts/raw/main/sire/001_ten_minute/ten_minute.ipynb\n",
+    "```\n",
+    "\n",
+    "The notebook will appear in the file browser in the left pane. Click on it to open, and then execute away. Feel free to use this as a starting point for your own notebooks for 10-minute challenges on your own biomolecular systems."
    ]
   },
   {
