Small updates based on feedback

--- a/sire/001_ten_minute/ten_minute.ipynb
+++ b/sire/001_ten_minute/ten_minute.ipynb
@@ -5,7 +5,7 @@
    "id": "110591fd-4053-451c-a39a-e20c67bca0ec",
    "metadata": {},
    "source": [
-    "# Random Input 10-minute Challenge\n",
+    "# What's in this file? 10-minute challenge!\n",
     "\n",
     "Julien gave me a 10-minute challenge. What could I learn from a random molecular input file using [sire](https://sire.openbiosim.org) in just 10 minutes? And so here I am, with the URLs for two files, `SYSTEM.top` and `SYSTEM.crd`.\n",
     "\n",
@@ -267,7 +267,7 @@
    "id": "60bfd79e-560a-4993-883c-aa063b624158",
    "metadata": {},
    "source": [
-    "It's interesting, looking at these energies, that the molecule appears to be in a higher energy conformation. The total energy is large and positive, driven by high angle, dihedral and 1-4 non-bonded energies. Maybe being bound to the protein has forced the ligand into an unfavourable conformation?\n",
+    "It's interesting, looking at these energies, that the molecule appears to be in a higher energy conformation. The total energy is large and positive, driven by high angle, dihedral and 1-4 non-bonded energies. But how does this relate to its interaction with the proteins?\n",
     "\n",
     "To find out, let's look to see what is around the ligand. It would be really convenient to have a `ligand` search term... Fortunately, we have the power to create our own search terms via [sire.search.set_token](https://sire.openbiosim.org/cheatsheet/search.html#creating-custom-search-tokens)."
    ]
@@ -491,7 +491,7 @@
    "id": "43b6c6cb-5f7f-49f2-9178-cc5ddc0f23cd",
    "metadata": {},
    "source": [
-    "The coulomb components are driven by LYS:33 and ASN:326. Indeed, most of the favourable binding energy appears to be coming from the coulomb interaction between LYS:33 and the ligand. Let's take a look to see if we can understand why?"
+    "The coulomb components are driven by LYS:33 and ASN:326. Indeed, most of the favourable interaction energy appears to be coming from the coulomb interaction between LYS:33 and the ligand. Let's take a look to see if we can understand why?"
    ]
   },
   {
