Updating the notebook to match the post

--- a/sire/001_ten_minute/ten_minute.ipynb
+++ b/sire/001_ten_minute/ten_minute.ipynb
@@ -267,7 +267,7 @@
    "id": "60bfd79e-560a-4993-883c-aa063b624158",
    "metadata": {},
    "source": [
-    "It's interesting, looking at these energies, that the molecule appears to be in a higher energy conformation. The total energy is large and positive, driven by high angle, dihedral and 1-4 non-bonded energies. But how does this relate to its interaction with the proteins?\n",
+    "How does the ligand's energy relate to its interaction with the proteins?\n",
     "\n",
     "To find out, let's look to see what is around the ligand. It would be really convenient to have a `ligand` search term... Fortunately, we have the power to create our own search terms via [sire.search.set_token](https://sire.openbiosim.org/cheatsheet/search.html#creating-custom-search-tokens)."
    ]
@@ -585,10 +585,9 @@
     "With this, my 10 minutes are up. So what did I find?\n",
     "\n",
     "1. This is a model of a ligand bound to a large trimeric protein (a homotrimer, but one where the titratio state of a histindine is different between the first and third proteins). This is solvated in a bath of water molecules and counter ions.\n",
-    "2. The ligand is bound in a slightly unfavourable conformation.\n",
-    "3. The closest residues are from two of the proteins, which form a pocket within which the ligand has bound.\n",
-    "4. The ligand is bound most tightly to LYS:33, through a strong electrostatic interaction\n",
-    "5. This interaction is mostly between the HZ1 atom of lysine and NAM atom of the ligand. These two atoms are separated by 2.4 Å.\n",
+    "2. The closest residues are from two of the proteins, which form a pocket within which the ligand has bound.\n",
+    "3. The ligand is bound most tightly to LYS:33, through a strong electrostatic interaction\n",
+    "4. This interaction is mostly between the HZ1 atom of lysine and NAM atom of the ligand. These two atoms are separated by 2.4 Å.\n",
     "\n",
     "Given another 10 minutes, and perhaps even a dynamics trajectory, I wonder what else I can find? But, for now, Julien, how did I do?\n",
     "\n",
@@ -601,6 +600,14 @@
     "\n",
     "The notebook will appear in the file browser in the left pane. Click on it to open, and then execute away. Feel free to use this as a starting point for your own notebooks for 10-minute challenges on your own biomolecular systems."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a54b7e7-f572-46ba-af24-dd263b2cc312",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
