Remember to add the link to the original notebook ;-)

--- a/sire/002_rdkit/rdkit.ipynb
+++ b/sire/002_rdkit/rdkit.ipynb
@@ -254,6 +254,12 @@
    "id": "f8697844-e8bd-42ee-9489-e521f8f64a99",
    "metadata": {},
    "source": [
+    "If you want to try this yourself, please feel free connect to [try.openbiosim.org](https://try.openbiosim.org) and starting a notebook. You can download the notebook used to generate this post onto the server by running this command in one of the notebook code cells.\n",
+    "\n",
+    "```\n",
+    "! wget https://github.com/OpenBioSim/posts/raw/main/sire/002_rdkit/rdkit.ipynb\n",
+    "```\n",
+    "\n",
     "The new [sire.convert](https://sire.openbiosim.org/tutorial/index_part05.html) functionality can be used to convert to the native types of other popular molecular modelling packages. Look forward to our next blog post, where we will show you how [conversion to OpenMM](https://sire.openbiosim.org/cheatsheet/openmm.html) let's you run [minimisation and molecular dynamics](https://sire.openbiosim.org/tutorial/part05/04_dynamics.html)!"
    ]
   },
