--- a/demos/sire/alchemy/exscientia_demo.ipynb
+++ b/demos/sire/alchemy/exscientia_demo.ipynb
@@ -107,7 +107,7 @@
    "id": "ad1714f8-1b49-407a-b622-900cb7ec1f51",
    "metadata": {},
    "source": [
-    "Here we choose the perturbed state as the default, and view all of the non-ghost atoms.W"
+    "Here we choose the perturbed state as the default, and view all of the non-ghost atoms."
    ]
   },
   {
@@ -189,7 +189,7 @@
     "                  temperature=\"25oC\", \n",
     "                  constraint=\"h-bonds\",\n",
     "                  perturbable_constraint=\"none\",\n",
-    "                  lambda_value=0.5)"
+    "                  lambda_value=0.5)}"
    ]
   },
   {
@@ -431,7 +431,7 @@
    "id": "770e0a55-bb2e-401b-9a12-faec49eea9b9",
    "metadata": {},
    "source": [
-    "We are compatible with all of the functionality in alchemlyb, e.g. here we pass in our s3 files to calculate and plot convergence.U"
+    "We are compatible with all of the functionality in alchemlyb, e.g. here we pass in our s3 files to calculate and plot convergence."
    ]
   },
   {
@@ -487,7 +487,7 @@
    "id": "0ee40707-4ac5-4846-a075-483f633e5eaa",
    "metadata": {},
    "source": [
-    "We could have created this ourself directly using the `sr.convert` function."
+    "We could have created this ourselves directly using the `sr.convert` function."
    ]
   },
   {
@@ -499,7 +499,9 @@
    "source": [
     "c = sr.convert.to(mols, \"openmm\", map={\"timestep\": sr.u(\"4fs\"),\n",
     "                                       \"temperature\": sr.u(\"25oC\"),\n",
-    "                                       \"lambda_value\": 0.5})\n",
+    "                                       \"lambda_value\": 0.5,\n",
+    "                                       \"constraint\": \"h-bonds\",\n",
+    "                                       \"perturbable_constraint\": \"none\"})\n",
     "c"
    ]
   },
@@ -598,6 +600,20 @@
     "    lam = l / 10.0\n",
     "    c.set_lambda(lam)\n",
     "    print(lam, c.get_potential_energy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17c3069c-11e0-45ce-b439-d0df523a0ae3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "integrator = c.getIntegrator()\n",
+    "integrator.step(100)\n",
+    "print(c.get_potential_energy())\n",
+    "c.set_lambda(0.5)\n",
+    "print(c.get_potential_energy())"
    ]
   },
   {
@@ -785,6 +801,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4729d4d0-d3f1-4d86-bfba-b2be18b4ae7d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea93afdc-70fb-4b10-9be0-9babe26603ae",
    "metadata": {},
    "outputs": [],
    "source": []
